# rukey

./: .gitignore  Cargo.toml  config-debug.kdl  config.kdl  export_pcb.sh  readme.md  rust-toolchain.toml
.github/workflows/: lint.yaml  pcb.yaml  testing.yml
PCB/: Sofle_Pico.kicad_pcb  Sofle_Pico.kicad_prl  Sofle_Pico.kicad_pro  Sofle_Pico.kicad_sch
PCB_main/: Sofle_Pico.kicad_pcb  Sofle_Pico.kicad_prl  Sofle_Pico.kicad_sch  fp-info-cache
PCB_thumb_cluster/: Sofle_Pico.kicad_pcb  Sofle_Pico.kicad_prl  Sofle_Pico.kicad_pro  Sofle_Pico.kicad_sch  fp-info-cache
rukey_config/: Cargo.toml
rukey_config/src/: lib.rs  web_config_protocol.rs
rukey_firmware/: Cargo.toml  memory.x
rukey_firmware/.cargo/: config.toml
rukey_firmware/src/: config.rs  input.rs  keyboard.rs  main.rs  mapping_state.rs  mouse.rs  usb.rs  web_config.rs
rukey_flash/: Cargo.toml  build.rs
rukey_flash/src/: buffer_nor_flash.rs  cli.rs  config.rs  flash.rs  main.rs
rukey_flash/src/test-configs/: bad-mappings.kdl  bad-nickname.kdl  config.kdl
scripts/: clippy.sh  fmt.sh  upgrades.sh
