[package]
name = "rukey_flash"
version = "0.0.10"
edition = "2024"
repository = "https://github.com/rukai/rukey"

[dependencies]
picoboot-rs = "0.2.0"
rusb = "0.9.4"
uf2-decode = "0.2.0"
# Use once bindeps is stabilized
#rukey_firmware = { path = "../rukey_firmware", artifact = "bin", target = "thumbv6m-none-eabi" }
goblin = "0.9.3"
miette = { version = "7.4.0", features = ["fancy"] }
rukey_config = { path = "../rukey_config" }
kdl = "6.3.3"
kdl_config = { git = "https://github.com/rukai/kdl_config", features = ["heapless_08"] }
kdl_config_derive = { git = "https://github.com/rukai/kdl_config" }
heapless = { workspace = true }
postcard = { version = "1.1.3", features = ["use-std"] }
sequential-storage = "7"
embedded-storage-async = "0.4.1"
futures = { version = "0.3", features = ["executor"] }

# workaround https://gitlab.com/robigalia/ssmarshal/-/merge_requests/2
# TODO: lets just eradicate this unmaintained thing from the dep tree entirely
ssmarshal = { version = "1", features = ["std"]}
clap = { version = "4.5.53", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
